[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/OuterCircle.png" type="Texture" id=1]
[ext_resource path="res://Assets/InnerCircle.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Planet.gd" type="Script" id=3]

[node name="Planet" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="OuterCircle" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.92549, 0.631373, 1 )
texture = ExtResource( 1 )

[node name="InnerCircle" type="Sprite" parent="."]
modulate = Color( 0.4, 0.368627, 0.368627, 1 )
texture = ExtResource( 2 )

[node name="LootTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="LootTimer" to="." method="_on_LootTimer_timeout"]
